# WrapConfig

./: .bumpversion.cfg  .coveragerc  .gitignore  pyproject.toml  setup.py
.github/actions/install_package/: action.yml
.github/workflows/: cover.yaml  publish.yml
config_manager/: __init__.py  core.py
inlined/: wrapconf.py
src/wrapconfig/: __init__.py
tests/: test_core.py  test_inmem.py  test_jsonconfig.py  test_yamlconfig.py
wrapconfig/: __init__.py  core.py
